# llmflow-search

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LLMFlowSearch.command  README.md  RUN_DEEP_RESEARCH.command  SECURITY.md  __main__.py  config.example.yaml  config.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt  web_server.py
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: cases.example.jsonl
core/: README.md  agent_core.py  agent_factory.py  background_jobs.py  config.py  deep_search_worker.py  event_bus.py  llm_gateway.py  llm_service.py  memory_module.py  monitoring.py  parsing_cache.py  planning_module.py  rate_limiter.py  report_generator.py  search_intent_analyzer.py  tools_module.py
data/: cache.db
docs/: setup.md
llmflow/: agent_core.py  config.json  duckduckgo_searcher.py  llm_service.py  main.py  memory_module.py  planning_module_improved.py  report.md.tmp.html  report_generator.py  tools_module.py
reports/: job_6af9857a-f170-4abd-92b6-fb9fc143d329_найди_мне_10_статей_про_ллм_аг_20251122_175446.md  job_6f1ce23c-4721-4893-b9dc-bf042b4c882b_найди_20_статей_про_ллм_агенто_20251122_171657.md  job_8503d84d-e8aa-4a8e-8e56-4ec184c6ba3b_найди_мне_10_статей_про_ллм_аг_20251122_174505.md  job_9dbc7dab-c13e-42ac-8c38-41678bbd0a9b_найди_20_статей_про_ллм_агенто_20251122_170614.md  job_ea980abc-dc7f-4614-8b26-54cdc1bcc5d3_найди_20_статей_про_ллм_агенто_20251122_170854.md
searxng/: docker-compose.yml  settings.yml
tests/: conftest.py  test_agent_react_loop.py  test_agents.py  (+18 more)
(+47 files in other folders)
