[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "local-deep-research"
version = "0.1.0"
description = "Local multi-agent Deep Research on Ollama and SearXNG, built on Anthropic's orchestrator-workers research principles — every claim traced through a citation-validated SQLite evidence store"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1",
  "markdown>=3.10.2",
  "mcp>=1.27,<2",
  "pydantic>=2.8,<3",
  "PyYAML>=6.0,<7",
  "xhtml2pdf>=0.2.17",
]

[project.scripts]
deep-research = "deep_research.cli:main"

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "pytest-cov>=5.0", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/deep_research"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 128
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
